--- a/Revealing Change over Time.ipynb
+++ b/Revealing Change over Time.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -25,8 +25,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "music = pd.read_csv(\"Music Sales.csv\")"
@@ -34,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +248,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -272,25 +274,25 @@
        "Czech Republic     74\n",
        "Portugal           72\n",
        "India              70\n",
+       "Denmark            38\n",
+       "Hungary            38\n",
+       "Austria            38\n",
+       "Sweden             38\n",
        "Netherlands        38\n",
        "Italy              38\n",
-       "Austria            38\n",
-       "Poland             38\n",
-       "Finland            38\n",
-       "Hungary            38\n",
        "Chile              38\n",
-       "Sweden             38\n",
-       "Denmark            38\n",
+       "Finland            38\n",
+       "Poland             38\n",
        "Argentina          37\n",
        "Norway             35\n",
        "Spain              32\n",
        "Belgium            31\n",
-       "Ireland            30\n",
        "Australia          30\n",
+       "Ireland            30\n",
        "Name: Country, dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,8 +303,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df_uc = music[(music[\"Country\"] == \"Canada\") | (music[\"Country\"] == \"USA\")]"
@@ -310,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +325,7 @@
        "Name: Country, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +372,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,8 +383,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df_uc_Sale = df_uc.groupby(['Country', 'InvoiceDate'])['RSales'].agg(\"sum\")"
@@ -388,8 +394,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df_uc_Sale =df_uc_Sale.reset_index()"
@@ -397,20 +405,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "index            int64\n",
        "Country         object\n",
        "InvoiceDate     object\n",
        "RSales         float64\n",
        "dtype: object"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -432,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -443,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +474,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>index</th>\n",
        "      <th>Country</th>\n",
        "      <th>InvoiceDate</th>\n",
        "      <th>RSales</th>\n",
@@ -476,70 +482,60 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>5</td>\n",
        "      <td>Canada</td>\n",
        "      <td>2008-01-06</td>\n",
        "      <td>31.68</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>53</th>\n",
-       "      <td>53</td>\n",
        "      <td>USA</td>\n",
        "      <td>2008-01-11</td>\n",
        "      <td>42.57</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>78</th>\n",
-       "      <td>78</td>\n",
        "      <td>USA</td>\n",
        "      <td>2008-02-19</td>\n",
        "      <td>3.96</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>86</th>\n",
-       "      <td>86</td>\n",
        "      <td>USA</td>\n",
        "      <td>2008-03-04</td>\n",
        "      <td>7.92</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>87</th>\n",
-       "      <td>87</td>\n",
        "      <td>USA</td>\n",
        "      <td>2008-03-05</td>\n",
        "      <td>12.87</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>88</th>\n",
-       "      <td>88</td>\n",
        "      <td>USA</td>\n",
        "      <td>2008-03-06</td>\n",
        "      <td>18.81</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>30</th>\n",
-       "      <td>30</td>\n",
        "      <td>Canada</td>\n",
        "      <td>2008-03-09</td>\n",
        "      <td>27.72</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>90</th>\n",
-       "      <td>90</td>\n",
        "      <td>USA</td>\n",
        "      <td>2008-04-14</td>\n",
        "      <td>30.69</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>33</th>\n",
-       "      <td>33</td>\n",
        "      <td>Canada</td>\n",
        "      <td>2008-04-22</td>\n",
        "      <td>0.99</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>41</th>\n",
-       "      <td>41</td>\n",
        "      <td>Canada</td>\n",
        "      <td>2008-06-05</td>\n",
        "      <td>2.97</td>\n",
@@ -549,20 +545,20 @@
        "</div>"
       ],
       "text/plain": [
-       "    index Country InvoiceDate  RSales\n",
-       "5       5  Canada  2008-01-06   31.68\n",
-       "53     53     USA  2008-01-11   42.57\n",
-       "78     78     USA  2008-02-19    3.96\n",
-       "86     86     USA  2008-03-04    7.92\n",
-       "87     87     USA  2008-03-05   12.87\n",
-       "88     88     USA  2008-03-06   18.81\n",
-       "30     30  Canada  2008-03-09   27.72\n",
-       "90     90     USA  2008-04-14   30.69\n",
-       "33     33  Canada  2008-04-22    0.99\n",
-       "41     41  Canada  2008-06-05    2.97"
+       "   Country InvoiceDate  RSales\n",
+       "5   Canada  2008-01-06   31.68\n",
+       "53     USA  2008-01-11   42.57\n",
+       "78     USA  2008-02-19    3.96\n",
+       "86     USA  2008-03-04    7.92\n",
+       "87     USA  2008-03-05   12.87\n",
+       "88     USA  2008-03-06   18.81\n",
+       "30  Canada  2008-03-09   27.72\n",
+       "90     USA  2008-04-14   30.69\n",
+       "33  Canada  2008-04-22    0.99\n",
+       "41  Canada  2008-06-05    2.97"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -573,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -591,10 +587,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1cc40694f28>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x2dc67fd9668>"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -628,12 +624,137 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_us = music.query(\"Country == 'USA'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\kids1\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_us['InvoiceDate'] = pd.to_datetime(df_us['InvoiceDate'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\kids1\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_us_r.sort_values(by=['InvoiceDate'], inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\kids1\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_us_r['Year'] = df_us_r['InvoiceDate'].apply(lambda x: x.year)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_us['RSales'] = df_us['Quantity'] * df_us['UnitPrice']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_year = df_us[(df_us['Year'] == 2011) | (df_us['Year'] == 2011)]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "df_month = df_year.groupby(pd.Grouper(freq='M'), 'Genre').agg({'Revenue': 'sum'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    ".agg({'Revenue': 'sum'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_us_r = df_us.query(\"Genre == 'Rock'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "df_2 = df_2.groupby(pd.Grouper(freq='M'))"
+   ]
   }
  ],
  "metadata": {
